--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -109,7 +109,9 @@
                         <input type="file" name="docs" value="Attach" size="100kb">
                     </p>
                 </fieldset>
-                <input type="submit" value="Send Your Application">
+                <div class="submit">
+                    <input type="submit" value="Send Your Application">
+                </div>
             </form>
         </div>
     </body>
